worker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker
  labels:
    app: voting-app
    component: worker
spec:
  containers:
  - name: worker
    image: mikesir87/votingapp-worker
