db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: voting-app
    component: db
spec:
  containers:
  - name: database
    image: postgres:9.6
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: voting-app
    component: db
  ports:
  - port: 5432
