redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: voting-app
    component: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voting-app
      component: redis
  template:
    metadata:
      name: redis
      labels:
        app: voting-app
        component: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: voting-app
    component: redis
  ports:
  - port: 6379
