results.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-app
  labels:
    app: voting-app
    component: results-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voting-app
      component: results-app
  template:
    metadata:
      name: results-app
      labels:
        app: voting-app
        component: results-app
    spec:
      containers:
      - name: results-app
        image: dockersamples/examplevotingapp_result

---
apiVersion: v1
kind: Service
metadata:
  name: results-app
spec:
  selector:
    app: voting-app
    component: results-app
  ports:
  - port: 80
