vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: voting-app
    component: voting-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voting-app
      component: voting-app
  template:
    metadata:
      name: voting-app
      labels:
        app: voting-app
        component: voting-app
    spec:
      containers:
      - name: voting-app
        image: dockersamples/examplevotingapp_vote:before

---
apiVersion: v1
kind: Service
metadata:
  name: voting-app
spec:
  selector:
    app: voting-app
    component: voting-app
  ports:
  - port: 80
  type: NodePort
