ingress_objects.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
spec:
  rules:
  - host: voting.local.mikesir87.training
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-app
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: results
spec:
  rules:
  - host: results.local.mikesir87.training
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: results-app
            port:
              number: 80
